--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
+    "api/**.php": {
+      "runtime": "now-php"
     }
   }
 }
