--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,23 @@
 {
-  "functions": {
-    "api/**.php": {
-      "runtime": "now-php"
+    "version": 2,
+    "builds": [
+    {
+    "src": "dist/server.js",
+    "use": "@vercel/node"
     }
-  }
-}
+    ],
+    "routes": [
+    {
+    "src": "/(.*)",
+    "dest": "dist/server.js",
+    "methods": [
+    "GET",
+    "POST",
+    "PUT",
+    "PATCH",
+    "DELETE",
+    "OPTIONS"
+    ]
+    }
+    ]
+    }
