--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",       
+    "resolveJsonModule": true,        
     "skipLibCheck": true
   },
   "exclude": ["node_modules", "dist"]
