--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "moduleResolution": "node",       
-    "resolveJsonModule": true,        
+    "resolveJsonModule": true,
+    "strict": true,
     "skipLibCheck": true
   },
   "exclude": ["node_modules", "dist"]
 }
+
