--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,16 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
     {
-    "src": "dist/server.js",
-    "use": "@vercel/node"
+      "src": "dist/server.js",
+      "use": "@vercel/node"
     }
-    ],
-    "routes": [
+  ],
+  "routes": [
     {
-    "src": "/(.*)",
-    "dest": "dist/server.js",
-    "methods": [
-    "GET",
-    "POST",
-    "PUT",
-    "PATCH",
-    "DELETE",
-    "OPTIONS"
-    ]
+      "src": "/(.*)",
+      "dest": "dist/server.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
-    ]
-    }
+  ]
+}
